	  or returning from idle on MySpaceIM.
	* Eliminated unmaintained Howl backend implementation for the
	  Bonjour protocol.  Avahi (or Apple's Bonjour runtime on win32) is
	  now required to use Bonjour.
	* Partial support for viewing ICQ status notes (Collin from
	  ComBOTS GmbH).
	* Support for Yahoo Messenger 7.0+ file transfer method (Thanumalayan S.)

	Pidgin:
	* Added the ability to theme conversation name colors (red and blue)
	  through your GTK+ theme, and exposed those theme settings to the 
	  Pidgin GTK+ Theme Control plugin (Dustin Howett)
	* Fixed having multiple alias edit areas in the infopane (Elliott Sales
	  de Andrade)
	* Save the conversation "Enable Logging" option per-contact (Moos
	  Heintzen)

	Finch:
	* Color is used in the buddylist to indicate status, and the conversation
	  window to indicate various message attributes. Look at the sample gntrc
	  file in the man page for details.
	* The default keybinding for dump-screen is now M-D and uses a file
	  request dialog. M-d will properly delete-forward-word, and M-f has been
	  fixed to imitate readline's behavior.
	* New bindings alt+tab and alt+shift+tab to help navigating between the
	  higlighted windows (details on the man page).
	* Recently signed on (or off) buddies blink in the buddy list.
	* New action 'Room List' in the action list can be used to get the list of
	  available chat rooms for an online account.

version 2.3.1 (12/7/2007):
	http://developer.pidgin.im/query?status=closed&milestone=2.3.1
		NOTE: Due to the way this release was made, it is possible that
		      bugs marked as fixed in 2.3.1 will not be fixed until the
		      next release.
	
	* Fixed a number of MSN bugs introduced in 2.3.0, resolving problems
	  connecting to MSN and random local display name changes
	* Going idle on MySpaceIM will no longer clear your status and message.
	* Idle MySpaceIM buddies should now appear online at login.
	* Fixed crashes in XMPP when discovering a client's capabilities